test/tests/stages/9_functions/valid/libraries/many_args.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[93]:
  int
  identifier(fib)
  (
  int
  identifier(n)
  )
  {
  if
  (
  identifier(n)
  ==
  const int(0)
  ||
  identifier(n)
  ==
  const int(1)
  )
  {
  return
  identifier(n)
  ;
  }
  else
  {
  return
  identifier(fib)
  (
  identifier(n)
  -
  const int(1)
  )
  +
  identifier(fib)
  (
  identifier(n)
  -
  const int(2)
  )
  ;
  }
  }
  int
  identifier(multiply_many_args)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  ,
  int
  identifier(e)
  ,
  int
  identifier(f)
  ,
  int
  identifier(g)
  ,
  int
  identifier(h)
  )
  {
  return
  identifier(a)
  *
  identifier(b)
  *
  identifier(c)
  *
  identifier(d)
  *
  identifier(e)
  *
  identifier(f)
  *
  identifier(fib)
  (
  identifier(g)
  )
  *
  identifier(fib)
  (
  identifier(h)
  )
  ;
  }
