test/tests/stages/9_functions/invalid_declarations/redefine_fun_as_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(foo)
  (
  void
  )
  ;
  int
  identifier(foo)
  =
  const int(1)
  ;
  return
  identifier(foo)
  ;
  }
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(1)
  ;
  }
